# HWGoiTWEBEng

./: .gitignore  pyproject.toml
HW10/: pyproject.toml
HW10/mysite2/: docker-compose.yml
HW10/mysite2/mysite2/: settings.py
HW10/mysite2/quotes/: admin.py  forms.py  urls.py  views.py
HW10/mysite2/quotes/migration_own_data/: migration_author.py  migration_quotes.py
HW10/mysite2/quotes/templates/: base.html
HW10/mysite2/quotes/templates/quotes/: add_author.html  add_quote.html  author_list.html  delete_author.html  edit_quote.html  home.html  popular_quotes.html  quote_list.html  quotes_by_tag.html  register.html  search_results.html
HW10/mysite2/quotes/templates/registration/: login.html  profile.html
HW11/: README.txt
HW11/RestApi/: pyproject.toml
HW11/RestApi/restapiapp/: .env  crud.py  docker-compose.yml  init_db.py  main.py  models.py  schemas.py
HW11/RestApi/restapiapp/fake_data/: insert_data.py
HW11/RestApi/restapiapp/routers/: contacts.py
HW12/RestApi/: alembic.ini  pyproject.toml
HW12/RestApi/alembic/versions/: 05ee01873022_initial_migration.py  91304c8cce83_initial_migration.py
HW12/RestApi/restapiapp/: .env  config.py  database.py  init_db.py  main.py
HW12/RestApi/restapiapp/crud/: __init__.py  contact.py  user.py
HW12/RestApi/restapiapp/models/: user.py
HW12/RestApi/restapiapp/routers/: auth.py  contact.py
HW12/RestApi/restapiapp/schemas/: contact.py  user.py
HW12/RestApi/restapiapp/utils/: auth.py
HW13/Part1/: README.txt
HW13/Part1/RestApi/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
HW13/Part1/RestApi/alembic/: env.py
HW13/Part1/RestApi/restapiapp/: .env  config.py  main.py
HW13/Part1/RestApi/restapiapp/crud/: user.py
HW13/Part1/RestApi/restapiapp/dependencies/: pycrypto-2.6.1-cp312-cp312-linux_x86_64.whl
HW13/Part1/RestApi/restapiapp/fake_data/: connection.py
HW13/Part1/RestApi/restapiapp/models/: contact.py  user.py
HW13/Part1/RestApi/restapiapp/routers/: auth.py  contact.py
HW13/Part1/RestApi/restapiapp/schemas/: __init__.py  contact.py
HW13/Part2/: README.txt
HW13/Part2/mysite2/: .env  Dockerfile  docker-compose.yml  pyproject.toml
HW13/Part2/mysite2/mysite2/: settings.py  urls.py
HW13/Part2/mysite2/quotes/: forms.py  models.py  urls.py  views.py
HW13/Part2/mysite2/quotes/connect_mongo/: connect_to_mongo.py
HW13/Part2/mysite2/quotes/migration_own_data/: migration_tags.py
HW13/Part2/mysite2/quotes/migrations/: 0001_initial.py
HW13/Part2/mysite2/quotes/templates/quotes/: author_detail.html  author_list.html  delete_quote.html  edit_author.html  home.html  quote_list.html  search_author_results.html  signup.html
HW13/Part2/mysite2/quotes/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html
HW14/RestApi/: .gitignore  docker-compose.yml  pyproject.toml  wait-for-it.sh
HW14/RestApi/alembic/versions/: 5855ef0fe9bb_final_migration.py
HW14/RestApi/docs/source/: conf.py  modules.rst  restapiapp.crud.rst  restapiapp.rst  restapiapp.utils.rst
HW14/RestApi/restapiapp/: config.py  database.py  dependencies.py  main.py
HW14/RestApi/restapiapp/crud/: contact.py  user.py
HW14/RestApi/restapiapp/routers/: auth.py  contact.py
HW14/RestApi/restapiapp/schemas/: contact.py  user.py
HW14/RestApi/restapiapp/utils/: auth.py
HW14/RestApi/source/: conf.py  index.rst
HW14/RestApi/tests/: test_auth.py  test_contacts_repository.py  test_user_repository.py
HW3/: Filter_file.py  Task1_Filter_file.py  Task2.py  third.py
HW4/front-init/: Dockerfile  index.html  main.py  message.html  requirements.txt  socket_server.py
HW4/front-init/storage/: data.json
HW5/: chat_client.py  chat_server.py  currency_fetcher.py  exchange_log.txt
HW6/: connection.py  create_table.py  docker-compose.yml  dump-my_database-202409232029.sql  insert_data.py  select.py  update_data.py
HW7/: Dockerfile  Random_date.py  __init__.py  alembic.ini  crud_examples.py  docker-compose.yml  drop.py  help_commands.py  main.py  models.py  my_select.py  pyproject.toml  readme.txt  seed.py
HW7/alembic/: env.py
HW7/alembic/versions/: 108275e754ca_add_date.py  6f0398c25d47_initial_migration5.py  8142a594d011_init.py  f2ffffd14051_initial_migration.py
HW8NEW/Task1/: pyproject.toml  readme.txt
HW8NEW/Task1/application/: .env  config.ini  connect_to_mongo.py  docker_compose.yaml  load_data.py  models.py  search_quotes.py
HW8NEW/Task2/: .env  connect_to_mongo.py  consumer.py  consumer_email.py  consumer_sms.py  docker_compose.yaml  models.py  producer.py  pyproject.toml  readme.txt
HW9/: .env  load_data_to_mongo.py  main.py  pyproject.toml  readme.txt
HW9/quotes_scraper/: authors.json
HW9/quotes_scraper/quotes_scraper/spiders/: authors_spider.py  quotes_spider.py
(+2 files in other folders)
