[tool.poetry]
name = "hwgoitwebeng"
version = "0.1.0"
description = ""
authors = ["Ihor Palii <paliiihor69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
jinja2 = "^3.1.4"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
