[tool.poetry]
name = "hwgoitwebeng"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.0.1"
aiofile = "^3.8.8"
aiohttp = "^3.10.5"
tabulate = "^0.9.0"
psycopg2-binary = "^2.9.9"
faker = "^29.0.0"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
